# cpplogger

./: .gitmodules  CMakeLists.txt  configure.bat  run.bat
inc/: ICPPLogger.hpp  logger.hpp
samples/: cpplogger_sample_1.cpp  cpplogger_sample_2.cpp  sample_1.cpp
src/: CCPPLogger.hpp  ICPPLogger.hpp
src/implementations/: CCPPLogger.cpp  CCPPLogger.hpp
